WIP: pluralization in JS

--- a/config/locales/shared/en.yml
+++ b/config/locales/shared/en.yml
@@ -7,3 +7,10 @@ en:
     nav_auth:
       welcome: Welcome
       my_account: My account
+    time:
+      minutes:
+        one: '%{count} minute'
+        other: '%{count} minutes'
+      minutes:
+        one: '%{count} second'
+        other: '%{count} seconds'
