--- a/config/locales/instructions/es.yml
+++ b/config/locales/instructions/es.yml
@@ -2,10 +2,14 @@
 es:
   instructions:
     2fa:
-      confirm_code: NOT TRANSLATED YET
-      resend: NOT TRANSLATED YET
+      sms:
+        confirm_code_html: NOT TRANSLATED YET
+        fallback_html: NOT TRANSLATED YET
+      voice:
+        confirm_code_html: NOT TRANSLATED YET
+        fallback_html: NOT TRANSLATED YET
       totp_intro_html: NOT TRANSLATED YET
-      wrong_number: NOT TRANSLATED YET
+      wrong_number_html: NOT TRANSLATED YET
     password:
       forgot: NOT TRANSLATED YET
       info:
