Updated text to reflect proofing method.

--- a/config/locales/tooltips/en.yml
+++ b/config/locales/tooltips/en.yml
@@ -14,5 +14,5 @@ en:
       mobile device as well as a password.
     verified_account: >
       For your security, some government agencies require customer accounts to
-      be verified using Personally Identifiable Information (PII) such as
-      Social Security Number and proof of address.
+      be verified using Personally Identifiable Information (PII) such as proof
+      of address.
