Fixed banner to not claim to be US gov.

--- a/config/locales/shared/en.yml
+++ b/config/locales/shared/en.yml
@@ -8,4 +8,4 @@ en:
       my_account: My account
       welcome: Welcome
     usa_banner:
-      official_site: An official website of the United States government
+      official_site: An unofficial website, NOT run by the US government
